<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101922" >

    <TextView
        android:id="@+id/txtheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/stringheading"
        android:textColor="#6f1d00"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtlong_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtheading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/stringlongDesc"
        android:textColor="#ecece5"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnplay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtheading"
        android:layout_below="@+id/txtlong_dec"
        android:layout_marginRight="52dp"
        android:layout_marginTop="18dp"
        android:text="@string/stringplay" />

    <Button
        android:id="@+id/btnclose"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnplay"
        android:layout_alignLeft="@+id/txtheading"
        android:layout_marginLeft="46dp"
        android:text="@string/stringclose" />

</RelativeLayout>